--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,45 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@layer base {
   body {
-    color: white;
-    background: black;
+    @apply font-body text-[#232428];
+  }
+  body::-webkit-scrollbar {
+    width: 8px; /* width of the entire scrollbar */
+  }
+
+  body::-webkit-scrollbar-track {
+    background: #e7ecee; /* color of the tracking area */
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: #232428; /* color of the scroll thumb */
+    border-radius: 50px;
+  }
+}
+
+@layer components {
+  .headerLink {
+    @apply cursor-pointer opacity-75 transition hover:opacity-100;
+  }
+  .headerIcon {
+    @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100;
+  }
+  .gradiantText {
+    @apply bg-gradient-to-r from-pink-500 to-violet-500;
+  }
+  .lineAnimation {
+    @apply relative cursor-pointer text-lg font-medium before:absolute before:inset-x-0 before:-bottom-1.5 before:h-0.5 before:origin-left before:scale-x-0 before:transform before:rounded-bl before:bg-black before:transition-all before:duration-200 hover:before:scale-x-100;
+  }
+  .borderGradient {
+    text-align: center;
+    padding-bottom: 5px;
+    background: linear-gradient(to right, #ec4899, #8b5cf6) left bottom
+      no-repeat;
+    background-size: 100% 2px;
+  }
+  .tabPanel {
+    @apply grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3;
   }
 }
